--- a/Projet Onssa/Accueil.resx
+++ b/Projet Onssa/Accueil.resx
@@ -193,6 +193,34 @@
         kvJ4+YymbOxdKDSRvgsXKDY/kN6wTRsHjcYtEL9t27TYUYYAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btn_Co.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAUeSURBVFhH7VdpiFtVFI77Dir4R9xxwSqIu6A/BAWXH24IVXFF64ioVHTEokhEbScvL8m8+ybF
+        NPfeQF1JpbZuULRYHQUXRGntn7ZTa6dWKUUF7XTsVOP3nXfezEsmM5VaBcEDh9z7nfWde+6S3P+0uzRv
+        /vwjggF/TiF251UqjcMV/ncoHLDHF41bXYzsnNDYJzkmpuI9Q3QYGj9Dp+PEr0bAzeCRIGqcUhpYcCrG
+        24mVjD1b1caJPvqi2nE63TXl8839g8iW4fCtfK12sMJCYeyuAv4L+I9i7G9VOBcYd6dgkFFHYSH6KMb2
+        begXa7Xafgp3p3w+vzecLQW/zkQUFoLzWeAx8M6isT3lcvMg6mK8JN9oHIjA9yUyNxZG/h41E5KPom7s
+        Frdarb0UbicE3zeI3INwsLZU9ccqnKMBvuBZ4C3wtlLsriFeMvWLFGsV+/2FxMLYXof5CLHA+GeywbgM
+        QeyGoHM/YymcULPZ3AdGs5DhptC4R7BuNxKnA4xdEsh/G0b1c+GkVorsZXONPwo4136U4zD2VwTGPs1d
+        AWwjbTCvp0kEsZ8JrBc8zAqx2sSF4PxyBH+lGLkPUNIP0d1nCh656+lIOHZ3C9MxK1VceAjGn4MHpUrG
+        PyR6kb+2zQ5z+ioZd1bi3w1iOV4uxvVLiQsBCCFYjq9t8kvT7ILI96eOoPMcfoc5Dk39Bvx+n5GtLEX1
+        q3W+JozsHakMXKEvrTLtF4GXI04f8RwPEYIo/Tdw9AOSeEoEoInyC/+sv6uxSx7N4MJcOsp0vmUC907d
+        saJ5xgC+gRWXA0y6N3KvqcFYwdSPUf3OBFKejfV8rBMnhj54uBPPJsBGBMadRBzVtj3cXu+ysQgiu/dU
+        V6hLAr8y66kS0Gpuy+LZBEjAViQy/zx+lxFYpROC76ueUGcC7GriUyXQzaZLAh8n+vjo2H6ZS04p9wnA
+        LdynqifUxZkczdMl0Dew4Iws3iWBDeCt6JlPUfGlaAw7B8BvYK7NRtUT6khge2ZPT5lAsiXdaIp3SeA7
+        MGMxZi92gT9JARp8oXpC7QnYdQpje07eBcRUjATdUIp3SeArle2QGzSpQNoD7p1y2R6pup0VWKGwdDP2
+        eiGVcZy98fTASWSZBOgb2LIEdwNI9PGcOorAm3FqvYR+WKz67QlE9gWFhYLYXpzKOFZYCGv7YirLJsCL
+        C++HVxFjE7a/Qf/NRRPWT4Qiz/TPwOtpVOh3p6lBj5ZzDdZ4pnhR0nthiMyxwkJI9qbEhjJ/LzEkMoO+
+        NQaP8JHxRwwms1WYfBHW0xhzgAj3ANHX5Ma1D6g4Ia4HBL9LAjjb8drh2d6r4t0m+sUHXQlf6THNGJP9
+        UolBUaqvRTHyT8gvbkAkdHsYuUtUdVqSKxy66K3bWH760Hcjg69iHF7dqj5BfGDwQmKz4bcB5a1qhP0q
+        Vy0zH+R9ryaTKOxvnA+dj8B4GYnNDjB98OBp0DfG66mnJu00r9I4QZXYlDRMme/A9PrdyfcdEjlazXIc
+        Ay+JLNHho5U2WR/0ufAvvZ4LBXcYn1csHbeNVKbdWcoMmAZtY9oktig/HiXVavVQdT898eWalM+u6+J4
+        FBVagvfeymTuf8Sh8xPHbFzuc9FptyGv5Stql6/iLLGZCpX66TgsbkHJ72LzyEMUh0ji1L/B65eMpntT
+        Aw2Xjb1Anu+wQUPfTB/pHfK3Sbt6hEdt9mWbVM0NUpYePP8Y8eQsV+3JOh0n/kuiTKf/Fcrl/gQFgWte
+        SQDc3AAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btn_Fr.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAftJREFUWEft
